Fix example to work with Forgelin 1.5.1 and new maven url

--- a/build.gradle
+++ b/build.gradle
@@ -41,10 +41,8 @@ processResources {
 }
 
 repositories {
-	maven {
-		name "shadowfacts"
-		url "http://mvn.rx14.co.uk/shadowfacts/"
-	}
+	jcenter()
+	maven { url "http://maven.shadowfacts.net/" }
 }
 
 dependencies {
